syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 654
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message CombineReq {
	uint32 combine_id = 5;
	uint32 combine_count = 3;
	uint64 avatar_guid = 8;
}
