syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "ItemParam.proto";

// CmdId: 646
// EnetChannelId: 0
// EnetIsReliable: true
message CombineRsp {
	int32 retcode = 13;
	uint32 combine_id = 12;
	uint32 combine_count = 6;
	uint64 avatar_guid = 15;
	repeated ItemParam cost_item_list = 10;
	repeated ItemParam result_item_list = 2;
	repeated ItemParam total_random_item_list = 9;
	repeated ItemParam total_return_item_list = 4;
	repeated ItemParam total_extra_item_list = 8;
}
